@@ -6,6 +6,12 @@ gnome2_ui_properties_SOURCES = \
 
 @INTLTOOL_DESKTOP_RULE@
 
+iconsdir   = $(GNOMECC_ICONS_DIR)
+icons_DATA = behavior-capplet.png
+
+desktop_iconsdir = $(datadir)/pixmaps
+desktop_icons_DATA = behavior-capplet.png
+
 desktopdir = $(GNOMECC_DESKTOP_DIR)
 Desktop_in_files = behavior.desktop.in
 desktop_DATA = $(Desktop_in_files:.desktop.in=.desktop)
@@ -13,4 +19,4 @@ Gladedir   = $(GNOMECC_GLADE_DIR)
 Glade_DATA = gnome2-ui-properties.glade
 INCLUDES   = $(GNOMECC_CAPPLETS_CFLAGS)
 CLEANFILES = $(GNOMECC_CAPPLETS_CLEANFILES)
-EXTRA_DIST = $(Glade_DATA) $(Desktop_in_files)
+EXTRA_DIST = $(Glade_DATA) $(icons_DATA) $(Desktop_in_files)
