@@ -2,7 +2,7 @@
 _Name=Toolbars & Menus
 _Comment=Sets the default behavior of GNOME applications
 Exec=gnome2-ui-properties
-Icon=gnome-applications.png
+Icon=behavior-capplet.png
 Terminal=0
 Type=Application
 Categories=Application;Settings;AdvancedSettings;
